fix dark mode modal

--- a/styles/modal.css
+++ b/styles/modal.css
@@ -48,7 +48,6 @@
 .modal-header {
     position: sticky;
     top: 0;
-    background-color: var(--main-bg-color);
     z-index: 1002; /* Ensure it stays above the content */
     display: flex;
     justify-content: space-between;
@@ -113,7 +112,6 @@
 .modal-info-title {
     font-size: 1.5rem;
     font-weight: bold;
-    color: #333;
     text-align: center;
 }
 
