--- a/styles/reset.css
+++ b/styles/reset.css
@@ -18,6 +18,10 @@ body.dark-mode {
     color: #e0e0e0;
 }
 
+body.dark-mode .modal {
+    background-color: #121212;
+}
+
 body.dark-mode .movie-container {
     background-color: #1e1e1e;
     color: #e0e0e0;
